Fixed clear button

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
     let blue = document.querySelector("#blue");
     let green = document.querySelector("#green");
     let r = 0, b = 0, g = 0;
+    // Make default etch
+    makeEtch(40);
+
     let grids = document.querySelectorAll(".grid");
     let mouseDown = false
     
@@ -164,7 +167,6 @@
         }
     })
    // Create the default grid
-   makeEtch(40);
     </script>
 </body>
 </html>
